[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://TouchInputDetector.tscn" type="PackedScene" id=2]
[ext_resource path="res://Card.gd" type="Script" id=3]

[node name="Card" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 385.797, 343.315 )
texture = ExtResource( 1 )
centered = false

[node name="TouchInputDetector" parent="Sprite" instance=ExtResource( 2 )]
[connection signal="dragged" from="Sprite/TouchInputDetector" to="." method="_on_TouchInputDetector_dragged"]
[connection signal="dragging" from="Sprite/TouchInputDetector" to="." method="_on_TouchInputDetector_dragging"]
[connection signal="long_pressed" from="Sprite/TouchInputDetector" to="." method="_on_TouchInputDetector_long_pressed"]
[connection signal="tapped" from="Sprite/TouchInputDetector" to="." method="_on_TouchInputDetector_tapped"]

[editable path="Sprite/TouchInputDetector"]
